# graphsec-detector

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  random.yaml  requirements.txt  test_ci.py  token.replace  translation
analysis/: audit.py  cwe_id_family_map.json  exploratory_analysis.ipynb  raw_data_stats.py  vuln_split_stats.csv
ci_rules/: command_injection.yml
config/: model_config.json  train_config.yaml
datasets/processed/: cwe_freq.json  normalised_keyword_freq.json  raw_keyword_freq.json
datasets/vudenc/raw/: output_formats.md
pipeline/: build_csn_negatives.py  cwe_mapping.json  down_sample_pos.py  export_vudenc_triples.py  extract_dfg.py  keyword_aliases.json  label_commits_with_cwe.py  load_vudenc.py  make_snippets.py  map_keywords_to_cwe.py  patch_code.py  preprocess_keywords.py  split_by_repo.py  strip_comments.py  vudencutils.py
scripts/: analyse_vuln_dist.py  download_dataset.sh  extract_samples.py  generate_keyword_freq.py  grid_snippets.sh  parse_full_and_diff_cleaned.py  prepare.sh  raw_keyword_freq.py  run_specific.sh  summarise_snippets.py  train.sh  train_all.sh  train_partial.sh  train_specific.sh  verify_ds.py
src/comparison/: run_bandit.py  run_semgrep.py  run_stc_analysis.py
src/comparison/command_injection_semgrep/results/: semgrep_0.json  semgrep_1.json  semgrep_10.json  semgrep_100.json  semgrep_1000.json  semgrep_1001.json  semgrep_1002.json  semgrep_1003.json  semgrep_1004.json  semgrep_1005.json  semgrep_1006.json  semgrep_1007.json  semgrep_1008.json  semgrep_1009.json  semgrep_101.json  semgrep_1010.json  semgrep_1011.json  semgrep_1012.json  semgrep_1013.json  semgrep_1014.json  semgrep_1015.json  semgrep_1016.json  (+1631 more)
src/comparison/results/: command_injection_metrics.txt  command_injection_semgrep_metrics.txt
src/data/: dataset.py
src/models/: graphcodebert_cls.py  test_batch.py  train.py  train_thresh.py
src/utils/: metrics.py  plot.py
