[tool.poetry]
name = "graphsec-detector"
version = "0.1.0"
description = ""
authors = ["Jake Hulme"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26"
requests = "^2.32.4"
urllib3 = "^2.5.0"
transformers = "^4.52.4"
tree-sitter-python = "^0.23.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
