[tool.poetry]
name = "graphsec-detector"
version = "0.1.0"
description = ""
authors = ["joh46 <joh46@bath.ac.uk>"]
readme = "README.md"
packages = [
  { include = "data", from = "src" },
  { include = "models", from = "src" },
  { include = "codesearch",      from = "extern/CodeBERT/GraphCodeBERT" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26"
requests = "^2.32.4"
urllib3 = "^2.5.0"
transformers = "^4.52.4"
tree-sitter-python = "^0.23.6"
scikit-learn = "^1.7.0"

[tool.poetry.group.gpu.dependencies]
torch = "^2.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
